# builtin-actors

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml  coverage.yml  publish.yml
actors/account/: Cargo.toml
actors/account/src/: lib.rs  testing.rs
actors/account/tests/: account_actor_test.rs
actors/adm/: Cargo.toml
actors/adm/src/: ext.rs  lib.rs  sol_facade.rs  state.rs
actors/cron/: Cargo.toml
actors/cron/src/: lib.rs  testing.rs
actors/cron/tests/: cron_actor_test.rs
actors/datacap/: Cargo.toml
actors/datacap/src/: lib.rs  state.rs  testing.rs
actors/datacap/tests/: datacap_actor_test.rs
actors/eam/: Cargo.toml
actors/eam/src/: ext.rs  lib.rs
actors/eam/tests/: create.rs
actors/ethaccount/: Cargo.toml
actors/ethaccount/src/: lib.rs
actors/ethaccount/tests/: ethaccount_test.rs  util.rs
actors/evm/: Cargo.toml
actors/evm/shared/: Cargo.toml
actors/evm/src/: ext.rs  lib.rs  reader.rs  state.rs  types.rs
actors/evm/tests/: asm.rs  basic.rs  calc.rs  call.rs  context_opcodes.rs  create.rs  delegate_call.rs  env.rs  events.rs  ext_opcodes.rs  misc.rs  precompile.rs  revert.rs  selfdestruct.rs  util.rs
actors/init/: Cargo.toml
actors/init/src/: lib.rs  state.rs  testing.rs
actors/init/tests/: init_actor_test.rs
actors/market/: Cargo.toml
actors/market/src/: balance_table.rs  emit.rs  ext.rs  lib.rs  policy.rs  state.rs  testing.rs  types.rs
actors/market/tests/: activate_deal_failures.rs  batch_activate_deals.rs  cron_tick_deal_expiry.rs  cron_tick_deal_slashing.rs  cron_tick_timedout_deals.rs  deal_api_test.rs  deal_termination.rs  harness.rs  market_actor_legacy_tests.rs  market_actor_test.rs  on_miner_sectors_terminate.rs  publish_storage_deals_failures.rs  random_cron_epoch_during_publish.rs  sector_content_changed.rs  settle_deal_payments.rs  transient_marked_for_termination.rs  verify_deals_for_activation_test.rs
actors/miner/: Cargo.toml
actors/miner/src/: bitfield_queue.rs  commd.rs  deadline_assignment.rs  deadline_state.rs  deadlines.rs  emit.rs  expiration_queue.rs  ext.rs  internal_tests.rs  lib.rs  monies.rs  notifications.rs  partition_state.rs  policy.rs  sector_map.rs  sectors.rs  state.rs  testing.rs  types.rs
actors/miner/tests/: aggregate_network_fee_test.rs  aggregate_prove_commit.rs  apply_rewards.rs  batch_method_network_fees_test.rs  change_beneficiary_test.rs  change_owner_address_test.rs  change_peer_id_test.rs  change_worker_address_test.rs  check_sector_proven_test.rs  compact_partitions_test.rs  compact_sector_numbers_tests.rs  confirm_update_worker_key_test.rs  deadline_assignment.rs  deadline_cron.rs  deadline_helper.rs  deadline_state_test.rs  deadlines.rs  declare_faults.rs  declare_recoveries.rs  expected_reward_for_power_clampted_at_atto_fil_test.rs  expiration_queue.rs  exported_getters.rs  extend_sector_expiration_test.rs  fip0081_initial_pledge.rs  miner_actor_test_bitfield_queue.rs  miner_actor_test_commitment.rs  miner_actor_test_construction.rs  miner_actor_test_ctl_addrs.rs  miner_actor_test_partitions.rs  miner_actor_test_peer_info.rs  miner_actor_test_precommit_batch.rs  miner_actor_test_wpost.rs  monies_test.rs  pledge_penalty_for_termination.rs  policy_test.rs  precommit_deposit_and_initial_pledge_positive_test.rs  precommit_expiry.rs  precommitted_sector_stores.rs  prove_commit.rs  prove_commit2_failures_test.rs  (+21 more)
actors/multisig/: Cargo.toml
actors/multisig/src/: lib.rs  state.rs  testing.rs  types.rs
actors/multisig/tests/: multisig_actor_test.rs  util.rs
actors/paych/: Cargo.toml
actors/paych/src/: lib.rs  testing.rs  types.rs
actors/paych/tests/: paych_actor_test.rs
actors/placeholder/: Cargo.toml
actors/power/: Cargo.toml
actors/power/src/: ext.rs  lib.rs  state.rs  testing.rs  types.rs
actors/power/tests/: power_actor_tests.rs  types_test.rs
actors/reward/: Cargo.toml
actors/reward/src/: expneg.rs  lib.rs  logic.rs  state.rs  testing.rs  types.rs
actors/reward/tests/: reward_actor_test.rs
actors/system/: Cargo.toml
actors/system/src/: lib.rs
actors/verifreg/: Cargo.toml
actors/verifreg/src/: emit.rs  expiration.rs  lib.rs  state.rs  testing.rs  types.rs
actors/verifreg/tests/: verifreg_actor_test.rs
integration_tests/: Cargo.toml
integration_tests/macro/: Cargo.toml
integration_tests/macro/src/: lib.rs
integration_tests/src/: deals.rs  expects.rs  lib.rs
integration_tests/src/tests/: authenticate_message_test.rs  batch_onboarding.rs  batch_onboarding_deals_test.rs  change_beneficiary_test.rs  change_owner_test.rs  commit_post_test.rs  datacap_tests.rs  evm_test.rs  extend_sectors_test.rs  init_test.rs  market_miner_withdrawal_test.rs  multisig_test.rs  power_scenario_tests.rs  prove_commit3_test.rs  prove_commit_niporep_test.rs  publish_deals_test.rs  replica_update3_test.rs  replica_update_test.rs  terminate_test.rs  verified_claim_test.rs  verifreg_remove_datacap_test.rs  withdraw_balance_test.rs
integration_tests/src/util/: mod.rs  workflows.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  test_utils.rs
runtime/src/builtin/: singletons.rs
runtime/tests/: batch_return_test.rs  mapmap_test.rs  multimap_test.rs  set_multimap_test.rs  set_test.rs  types_test.rs
scripts/: upload-release-assets.sh
src/: main.rs
state/: Cargo.toml
state/src/: check.rs
test_vm/: Cargo.toml
test_vm/src/: constants.rs  lib.rs  messaging.rs
test_vm/tests/suite/: authenticate_message_test.rs  batch_onboarding.rs  batch_onboarding_deals_test.rs  change_beneficiary_test.rs  change_owner_test.rs  commit_post_test.rs  datacap_tests.rs  evm_test.rs  extend_sectors_test.rs  init_test.rs  market_miner_withdrawal_test.rs  move_partitions_test.rs  multisig_test.rs  power_scenario_tests.rs  prove_commit3_test.rs  prove_commit_niporep_test.rs  publish_deals_test.rs  replica_update3_test.rs  replica_update_test.rs  terminate_test.rs  test_vm_test.rs  verified_claim_test.rs  verifreg_remove_datacap_test.rs  withdraw_balance_test.rs
vm_api/: Cargo.toml
vm_api/src/: builtin.rs  lib.rs  trace.rs
(+31 files in other folders)
