[package]
name = "recall_fil_builtin_actors_state"
description = "Builtin Actor state utils for Filecoin"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
recall_fil_actor_account = { workspace = true}
recall_fil_actor_verifreg = { workspace = true}
recall_fil_actor_datacap = { workspace = true}
recall_fil_actor_cron = { workspace = true}
recall_fil_actor_market = { workspace = true}
recall_fil_actor_multisig = { workspace = true}
recall_fil_actor_paych = { workspace = true}
recall_fil_actor_power = { workspace = true}
recall_fil_actor_miner = { workspace = true}
recall_fil_actor_reward = { workspace = true}
recall_fil_actor_system = { workspace = true}
recall_fil_actor_init = { workspace = true}
recall_fil_actors_runtime = { workspace = true}
frc46_token = { workspace = true }
fvm_shared = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
recall_vm_api = { workspace = true }

num-traits = { workspace = true }
anyhow = { workspace = true }
bimap = { workspace = true }
num-derive = { workspace = true }
serde = { workspace = true }
cid = { workspace = true }

[dev-dependencies]

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]
