[package]
name = "recall_fil_actor_account"
description = "Builtin account actor for Filecoin"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
recall_fil_actors_runtime = { workspace = true }
frc42_dispatch = { workspace = true }
fvm_actor_utils = { workspace = true }
fvm_shared = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
recall_fil_actors_runtime = { workspace = true, features = ["test_utils", "sector-default"] }

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]
