[package]
name = "fil_actor_adm"
description = "Builtin machines address manager actor for ADM"
version = "12.0.0"
license = "MIT OR Apache-2.0"
authors = ["ADM"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm", "adm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
fil_actors_evm_shared = { workspace = true }
fil_actors_runtime = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
multihash = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
fil_actors_runtime = { workspace = true, features = ["test_utils"] }

[features]
fil-actor = ["fil_actors_runtime/fil-actor"]
