[package]
name = "recall_fil_actor_adm"
description = "Builtin machines address manager actor for ADM"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["Protocol Labs", "Filecoin Core Devs"]
keywords = ["filecoin", "web3", "wasm", "adm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
cid = { workspace = true }
recall_fil_actors_runtime = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
hex-literal = { workspace = true }
integer-encoding = { workspace = true }
log = { workspace = true }
multihash = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
recall_sol_facade = { workspace = true, features = ["machine"] }

[dev-dependencies]
recall_fil_actors_runtime = { workspace = true, features = ["test_utils"] }

[features]
fil-actor = ["recall_fil_actors_runtime/fil-actor"]
